[FIX] mail: discuss call isTalking no transparent in dark theme
Before this commit, the outline color when someone is talking in a
discuss call had some transparency in dark theme. This is not great
because this makes it hard to see it, especially when it fuses with
the content below like camera or screen-sharing stream.

This commit removes the slight transparency in dark theme isTalking
outline color, matching the lack of transparency like in white theme.

Also this commit reduces the effect of the isTalking in the systray
call menu: this was too distracting especially in dark theme. The
color wasn't also matching in dark theme, which this commit fixes.

--- a/addons/mail/static/src/discuss/call/common/call_menu.scss
+++ b/addons/mail/static/src/discuss/call/common/call_menu.scss
@@ -3,7 +3,7 @@
     @include o-mail-call-bordered(.7);
 
     &.o-is-talking {
-        box-shadow: inset 0 0 0 2px var(--discuss-talkingColor, $o-discuss-talkingColor);
+        box-shadow: inset 0 0 0 1px var(--discuss-talkingColor, $o-discuss-talkingColor);
     }
 
     &.o-isOdooCommunity {
